--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+:root {
+	--color-primary: black;
+	--color-secondary: white;
+}
+
+html {
+	background: var(--color-primary);
+}
+
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
@@ -5,6 +14,12 @@ body {
 		"Helvetica Neue", sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+
+	background: var(--color-primary);
+	color: var(--color-secondary);
+	font-size: 16px;
+
+	transition: background 0.25s ease-in-out, color 0.25s ease-in-out;
 }
 
 svg {
