--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,10 +3,6 @@
 	--color-secondary: white;
 }
 
-html {
-	background: var(--color-primary);
-}
-
 body {
 	margin: 0;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
@@ -19,11 +15,10 @@ body {
 	color: var(--color-secondary);
 	font-size: 16px;
 
-	transition: background 0.25s ease-in-out, color 0.25s ease-in-out;
+	transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
 }
 
 svg {
 	cursor: crosshair;
 	user-select: none;
 }
-
