--- a/src/components/SvgCanvas/SvgCanvas.module.css
+++ b/src/components/SvgCanvas/SvgCanvas.module.css
@@ -12,4 +12,6 @@
    left: 0;
    transform: translate(-50%, -50%);
    pointer-events: none;
+   height: var(--radius);
+   width: var(--radius);
  }
