--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,5 +15,5 @@ body {
 	color: var(--color-secondary);
 	font-size: 16px;
 
-	transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out;
+	/* transition: background-color 0.25s ease-in-out, color 0.25s ease-in-out; */
 }
