--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -16,6 +16,8 @@
 }
 
 .inner {
+   overflow: auto;
+   scroll-snap-type: x mandatory;
    padding: 2rem;
    display: grid;
    gap: 1rem;
@@ -24,6 +26,7 @@
 }
 
 .panel {
+   scroll-snap-align: center;
    display: flex;
    flex-direction: column;
    gap: 1rem;
