--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 :root {
 	--color-primary: black;
 	--color-secondary: white;
+	--easeSnappy: cubic-bezier(0.87, 0, 0.13, 1);
+	--easeSmooth: cubic-bezier(0.45, 0.02, 0.09, 0.98);
 }
 
 body {
