--- a/src/components/SvgCanvas/SvgCanvas.module.css
+++ b/src/components/SvgCanvas/SvgCanvas.module.css
@@ -1,6 +1,9 @@
 .root {
    cursor: crosshair;
    user-select: none;
+   height: 100vh;
+   height: 100lvh;
+   width: 100vw;
 }
 
 .customCursor {
