--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -1,49 +1,34 @@
 .wrapper {
-   position: fixed;
-   bottom: 0;
-   right: 0;
-   width: 100%;
-   pointer-events: none;
-   box-sizing: border-box;
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	box-sizing: border-box;
 
-   div {
-      pointer-events: none;
-   }
+	div {
+		pointer-events: none;
+	}
 
-   button {
-      pointer-events: auto;
-   }
+	/* Allow user to draw behind the menu */
+	pointer-events: none;
+	* {
+		pointer-events: auto;
+	}
 }
 
 .inner {
-   overflow: auto;
-   scroll-snap-type: x mandatory;
-   padding: var(--contentPadding);
-   display: grid;
-   gap: 1rem;
-   grid-template-columns: repeat(6, 1fr);
-   border-radius: var(--borderRadius);
-}
-
-.panel {
-   scroll-snap-align: center;
-   display: flex;
-   flex-direction: column;
-   gap: 1rem;
-   color: var(--color-secondary);
-   pointer-events: none;
-}
-
-.grid {
-   display: flex;
-   flex-direction: column;
-   flex-wrap: wrap;
-   gap: 0.35rem;
+	overflow: auto;
+	scroll-snap-type: x mandatory;
+	padding: var(--contentPadding);
+	display: grid;
+	gap: 1rem;
+	grid-template-columns: repeat(6, 1fr);
+	border-radius: var(--borderRadius);
 }
 
 .overlay {
-   position: fixed;
-   bottom: 0;
-   right: 0;
-   padding: var(--contentPadding);
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	padding: var(--contentPadding);
 }
