--- a/src/components/SvgCanvas/SvgCanvas.module.css
+++ b/src/components/SvgCanvas/SvgCanvas.module.css
@@ -1,9 +1,8 @@
 .root {
    cursor: crosshair;
    user-select: none;
-   height: 100vh;
-   height: 100lvh;
-   width: 100vw;
+   height: 100%;
+   width: 100%;
 }
 
 .customCursor {
