--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -7,9 +7,10 @@
    display: inline-block;
    text-align: center;
    width: fit-content;
-   transition: background-color 0.15s var(--easeSmooth), scale 0.15s var(--easeSmooth);
+   transition: background-color 0.15s var(--easeSmooth), scale 0.15s var(--easeSmooth), opacity 0.15s var(--easeSmooth);
    scale: 1;
    cursor: pointer;
+   opacity: 1;
 
    &:hover {
       background-color: color-mix(in srgb, var(--color-secondary) 20%, transparent);
@@ -19,5 +20,10 @@
    &:active {
       background-color: color-mix(in srgb, var(--color-secondary) 10%, transparent);
       scale: 1;
+   }
+
+   @starting-style {
+      opacity: 0;
+      scale: 0.5;
    }
 }
