--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,29 +1,44 @@
 .root {
-   padding: 0.75rem 1.25rem;
-   border-radius: 1rem;
-   background-color: color-mix(in srgb, var(--color-secondary) 10%, transparent);
-   color: var(--color-secondary);
-   backdrop-filter: blur(0.5rem);
-   display: inline-block;
-   text-align: center;
-   width: fit-content;
-   transition: background-color 0.15s var(--easeSmooth), scale 0.15s var(--easeSmooth), opacity 0.15s var(--easeSmooth);
-   scale: 1;
-   cursor: pointer;
-   opacity: 1;
+	padding: 0.75rem 1.25rem;
+	border-radius: 1rem;
+	background-color: color-mix(
+		in srgb,
+		var(--color-secondary) 10%,
+		transparent
+	);
+	color: var(--color-secondary);
+	backdrop-filter: blur(0.5rem);
+	display: inline-block;
+	text-align: center;
+	width: fit-content;
+	transition:
+		background-color 0.15s var(--easeSmooth),
+		scale 0.15s var(--easeSmooth),
+		opacity 0.15s var(--easeSmooth);
+	scale: 1;
+	cursor: pointer;
+	opacity: 1;
 
-   &:hover {
-      background-color: color-mix(in srgb, var(--color-secondary) 20%, transparent);
-      scale: 1.05;
-   }
+	&:hover {
+		background-color: color-mix(
+			in srgb,
+			var(--color-secondary) 20%,
+			transparent
+		);
+		scale: 1.05;
+	}
 
-   &:active {
-      background-color: color-mix(in srgb, var(--color-secondary) 10%, transparent);
-      scale: 1;
-   }
+	&:active {
+		background-color: color-mix(
+			in srgb,
+			var(--color-secondary) 10%,
+			transparent
+		);
+		scale: 1;
+	}
 
-   @starting-style {
-      opacity: 0;
-      scale: 0.5;
-   }
+	@starting-style {
+		opacity: 0;
+		scale: 0.5;
+	}
 }
