--- a/src/components/SvgCanvas/SvgCanvasCustomCursor/SvgCanvasCustomCursor.module.css
+++ b/src/components/SvgCanvas/SvgCanvasCustomCursor/SvgCanvasCustomCursor.module.css
@@ -5,7 +5,7 @@
    position: fixed;
    top: 0;
    left: 0;
-   transform: translate(-50%, -50%);
+   transform-origin: center;
    pointer-events: none;
    height: var(--radius);
    width: var(--radius);
