style: enhance button and input styles; add menu position toggle

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -6,6 +6,7 @@
 		var(--color-secondary) 10%,
 		transparent
 	);
+	user-select: none;
 	color: var(--color-secondary);
 	backdrop-filter: blur(0.5rem);
 	display: inline-block;
