--- a/src/components/Menu/MenuPanel/MenuPanel.module.css
+++ b/src/components/Menu/MenuPanel/MenuPanel.module.css
@@ -11,7 +11,7 @@
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
-   gap: 0.35rem;
+   gap: var(--panelGridGap);
 }
 
 .skeleton {
