--- a/src/components/SvgCanvas/SvgCanvas.module.css
+++ b/src/components/SvgCanvas/SvgCanvas.module.css
@@ -18,7 +18,6 @@
 
 .loadingSpinner {
 	position: absolute;
-	top: 0;
 	left: 0;
 	width: 1rem;
 	height: 1rem;
@@ -32,6 +31,14 @@
 	transition:
 		opacity 0.15s var(--easeSmooth),
 		scale 0.15s var(--easeSmooth);
+
+	&[data-editor-position="top"] {
+		bottom: 0;
+	}
+
+	&[data-editor-position="bottom"] {
+		top: 0;
+	}
 
 	@starting-style {
 		opacity: 1;
