--- a/src/components/InputColor/InputColor.module.css
+++ b/src/components/InputColor/InputColor.module.css
@@ -1,42 +1,30 @@
 .wrapper {
-	border-radius: 1rem;
-	background-color: color-mix(
-		in srgb,
-		var(--color-secondary) 10%,
-		transparent
-	);
+	border-radius: var(--border-radius);
+	background-color: var(--input-bg-color);
 	display: flex;
 	align-items: center;
 	flex-direction: row;
-	gap: 0.5rem;
+	gap: var(--input-inner-gap);
 	width: fit-content;
 	color: var(--color-secondary);
-	backdrop-filter: blur(0.5rem);
-	transition:
-		background-color 0.15s var(--easeSmooth),
-		scale 0.15s var(--easeSmooth);
+	backdrop-filter: var(--input-bg-filter);
+	transition: var(--input-transition);
 
-	&:hover {
-		background-color: color-mix(
-			in srgb,
-			var(--color-secondary) 20%,
-			transparent
-		);
-		scale: 1.05;
+	@media (hover: hover) and (pointer: fine) {
+		&:hover {
+			background-color: var(--input-bg-color-hover);
+			scale: var(--input-scale-hover);
+		}
 	}
 
 	&:active {
-		background-color: color-mix(
-			in srgb,
-			var(--color-secondary) 10%,
-			transparent
-		);
-		scale: 1;
+		background-color: var(--input-bg-color-active);
+		scale: var(--input-scale-active);
 	}
 }
 
 .label {
-	padding: 0.75rem 0.25rem 0.75rem 1.25rem;
+	padding: var(--input-padding-y) 0.25rem var(--input-padding-y) 1.25rem;
 	cursor: pointer;
 	user-select: none;
 }
@@ -44,10 +32,11 @@
 .input {
 	width: 3rem;
 	height: 100%;
-	border-radius: 0 1rem 1rem 0;
+	border-radius: 0 var(--border-radius) var(--border-radius) 0;
 	outline: none;
 	border: none;
 	background-color: transparent;
 	color: var(--color-secondary);
-	padding: 0.75rem 0.75rem 0.75rem 0;
+	padding: var(--input-padding-y) var(--input-padding-y) var(--input-padding-y)
+		0;
 }
