--- a/src/components/Menu/Menu.module.css
+++ b/src/components/Menu/Menu.module.css
@@ -26,13 +26,11 @@
 .inner {
 	overflow: auto;
 	scroll-snap-type: x mandatory;
-	padding: var(--contentPadding);
+	padding: var(--content-padding);
 	display: grid;
 	gap: 1rem;
 	grid-template-columns: repeat(6, 1fr);
-	border-radius: var(--borderRadius);
-
-	
+	border-radius: var(--border-radius);
 }
 
 .overlay {
@@ -41,7 +39,7 @@
 	right: 0;
 	display: flex;
 	flex-direction: column;
-	gap: var(--panelGridGap);
+	gap: var(--panel-grid-gap);
 	align-items: flex-end;
-	padding: var(--contentPadding);
+	padding: var(--content-padding);
 }
